...
//

import SwiftUI

struct AirportView: View {
    @State var airportData: AirportData
    @State var activeTab: String = "Arrivals"

    var body: some View {
        VStack {
            if airportData.isFetching {
                ProgressView("Loading flight data...").background(Color(UIColor.systemBackground))
            } else {
...
                            .toolbar { reloadToolbarItem() }
                            .toolbarBackground(.hidden, for: .navigationBar)
                            .navigationTitle(Text(activeTab))
                            .navigationBarTitleDisplayMode(.inline)
                    }
                    .tabItem { Label(
                        "Departures", systemImage: "airplane.departure")
                    }.tag("Departures")
                }
            }
        }.task { await reloadData() }
    }

...
